# cheech

./: .clangd  CMakeLists.txt  CMakePresets.json  README.md
cheech/: asan.c  lexer.h  main.c
cmake/: common.cmake
test/: test_lexer.c  test_lexer.h
